--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.html.twig
@@ -67,7 +67,7 @@
       <a href="{{  path('register_artsenal') }}">Registrarse</a>
     </div>
     <div class="col-sm-1 col-lg-1 col-md-1  vertical-center submenu-item submenu-cesta " >
-      <a href="{{ path('ver_cesta_artsenal') }}">Mi cesta</a>
+      <a href="{{ path('ver_cesta') }}">Mi cesta</a>
       <i></i>
       {% image '@AppShopThemeBundle/Resources/public/images/icon_cesta.png'%}
       <img  style="display: inline; margin-top: -12px;"  class="img-responsive" src="{{ asset_url }}" alt="artsenal"/>
