--- a/src/App/ShopThemeBundle/Resources/views/Paginas/categoria.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Paginas/categoria.html.twig
@@ -11,16 +11,10 @@
 	<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
 
 
-		<select class="pull-right filtro_producto"  name="ciudad" id="ciudad" onchange="getProductosBy()" >
-			<option value="-1">Ciudad</option>
-			<option value="-1">Guayaquil</option>
-			<option value="-1">Quito</option>
-			<option value="-1">Cuenca</option>
-		</select>
 
 
 		<select class="pull-right filtro_producto"  name="precios" id="precio"  onchange="getProductosBy()" >
-			<option value="-1">Precios</option>
+			<option value="-1">Cualquier Precios</option>
 			<option value="1">$10.00 - $25.00</option>
 			<option value="2">$26.00 - $50.00</option>
 			<option value="3">$10.00 - $75.00</option>
@@ -31,7 +25,7 @@
 
 
 		<select class="pull-right filtro_producto"  name="subcategoria" id="subcategoria"  onchange="getProductosBy()" >
-		<!-- <option value="-1">Categorias</option>     -->
+        <option value="-1">Cualquier subcategoria</option>
 		{% for subcategoria in subcategorias %}
 		<option value="{{subcategoria.id}}">{{subcategoria.nombre}}</option>    
 		{% endfor %}
