--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -95,7 +95,7 @@
               </a>
             </li>
 
-            <li>
+            {#<li>
               <a href="{{  path('creacion_tienda_membresia_artsenal') }}">
                 Membresia
               </a>
@@ -105,7 +105,7 @@
               <a href="{{  path('perfil_usuario') }}">
                 Perfil
               </a>
-            </li>
+            </li>#}
             <!-- 
 <li>
 <a href="#">
@@ -163,19 +163,19 @@ Configuracion
           {% endimage %}
         </div>
         
-        <div class=" col-md-offset-1 col-sm-offset-1  col-lg-offset-1   col-sm-5 col-lg-5 col-md-5  vertical-center " >
+        <div class=" col-md-offset-1 col-sm-offset-1  col-lg-offset-1   col-sm-6 col-lg-6 col-md-6  vertical-center " >
           <form  method="post" action="{{  path('app_shop_theme_buscar') }}">
             <input class="search_txt" type="text" name="buscar" placeholder="ingrese el producto que desee buscar" />
           </form>
         </div>
         
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2   ">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1   ">
           
           <div class="row">
             
             
             
-            <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
+            <div class="col-sm-6 col-lg-6 col-md-6  vertical-center submenu-item " >
 
 
 
@@ -197,19 +197,19 @@ Configuracion
               
             </div>
             
-            <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
+            {#<div class="col-sm-6 col-lg-6 col-md-6  vertical-center submenu-item " >
               <a href="{{  path('tienda_setup') }}">
                 {% image '@AppShopThemeBundle/Resources/public/images/corazon.png'%}
                 <img    class="  icon-submenu " src="{{ asset_url }}" alt="like"/>
                 {% endimage %}
               </a>
-            </div>
+            </div>#}
 
 
-            <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
+            <div class="col-sm-6 col-lg-6 col-md-6  vertical-center submenu-item " >
               <a href="{{  path('tienda_setup') }}">
                 {% image '@AppShopThemeBundle/Resources/public/images/tienda.png'%}
-                <img   data-toggle="tooltip" data-placement="bottom" title="Mi tienda"  class="  icon-submenu " src="{{ asset_url }}" alt="tienda"/>
+                <img   data-toggle="tooltip" data-placement="bottom" title="Mi tienda"  class="  " src="{{ asset_url }}" alt="tienda"/>
                 {% endimage %}
               </a>
             </div>
