--- a/src/App/ShopThemeBundle/Resources/views/Paginas/registar.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Paginas/registar.html.twig
@@ -192,8 +192,13 @@
     								<br/>
 
     								<p  style="color: rgb(102, 102, 102); margin-bottom: 0px;" >Al registrarse, confirma que usted acepta nuestros</p>
-    								<p class="terminos_condiciones_link" >Terminos de Uso y Politicas de Privacidad</p>
-
+    								{#<p class="terminos_condiciones_link" >Terminos de Uso y Politicas de Privacidad</p>#}
+                                    <div class="checkbox">
+                                        <label class="terminos_condiciones_link" style="font-weight:bold;">
+                                          
+                                          {{  form_widget( form.terminos )}}Términos de Uso y Políticas de Privacidad
+                                        </label>
+                                    </div>
 
     								<div class="form-group">
     									<div class="col-sm-offset-2 col-sm-10">
