--- a/src/App/ShopThemeBundle/Resources/views/Pagos/cesta.nueva.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Pagos/cesta.nueva.html.twig
@@ -156,7 +156,7 @@
                         </div>
                         <div class="form-group">
                             <label for="asunto">Mensaje</label>
-                            <textarea class="form-control" name="contenido" rows="3"></textarea>
+                            <textarea class="form-control" name="contenido" id="contenido" rows="3"></textarea>
                         </div>
                     </form>
 
