--- a/src/Selnet/TiendaOnlineBundle/Resources/views/Pages/register.html.twig
+++ b/src/Selnet/TiendaOnlineBundle/Resources/views/Pages/register.html.twig
@@ -155,8 +155,8 @@
 								</div>
 
 								<p>Al registrarse, confirma que usted acepta nuestros</p>
-								<p>Terminos de Uso y Politicas de Privacidad</p>
-
+								{#<p>Terminos de Uso y Politicas de Privacidad</p>#}
+								
 
 								<div class="form-group">
 									<div class="col-sm-offset-2 col-sm-10">
